<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="45dp"
    android:orientation="vertical"
    tools:context="com.pandamnapp.ifound.HomeScreen"
    tools:showIn="@layout/activity_home_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:prompt="@string/spinner_title"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/search"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:hint="@string/search" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:onClick="addURL"
            android:text="@string/Enter" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

</LinearLayout>
