<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <ImageView
            android:layout_width="236dp"
            android:layout_height="191dp"
            android:id="@+id/artWork"
            android:src="@mipmap/ic_launcher" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/trackName"
                android:id="@+id/trackName"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/kind"
                android:id="@+id/kind" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shortDescription"
                android:id="@+id/shortDes"
                android:layout_marginTop="10dp"
                android:layout_weight="0.34" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="trackPrice"
                android:id="@+id/trackPrice"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"/>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longDescription"
        android:id="@+id/longDesc"
        android:visibility="gone"
        android:layout_weight="0.54" />


</LinearLayout>